--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "author": "Prity",
   "license": "ISC",
   "dependencies": {
-    "async-handler-express": "^0.2.4",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.0",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.1",
+    "winston": "^3.17.0"
   }
 }
