--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "firebase": "^11.6.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
 }
